--- a/ro-cms-controller/src/main/webapp/static/login/css/login.css
+++ b/ro-cms-controller/src/main/webapp/static/login/css/login.css
@@ -2,18 +2,18 @@
 			margin: 0;
 			padding: 0;
 		}
-		
+
 		.bj {
 			width: 100%;
 			height: 100%;
 			position: relative;
-			background: #505D6E url(img/gamersky_08origin_15_20181111121754D.jpg) no-repeat center center fixed;
+			background: #505D6E url(../img/bgimage.jpg) no-repeat center center fixed;
 			padding: 1px;
 			box-sizing: border-box;
 			z-index: 1;
 			background-size: cover;
 		}
-		
+
 		.bg1 {
 			width: 100%;
 			height: 100%;
@@ -23,17 +23,17 @@
 			filter: blur(5px);
 			z-index: 2;
 		}
-		
+
 		.html {
 			position: absolute;
 			top: 0;
 			width: 100%;
 		}
-		
+
 		.head {
 			overflow: hidden;
 		}
-		
+
 		.shake {
 			-webkit-animation-name: shake_box;
 			-ms-animation-name: shake_box;
@@ -51,13 +51,13 @@
             -ms-animation-play-state: running;
             animation-play-state: running;*/
 		}
-		
+
 		.addStyle {
 			-webkit-animation-iteration-count: infinite;
 			-ms-animation-iteration-count: infinite;
 			animation-iteration-count: infinite;
 		}
-		
+
 		.shake:hover {
 			/*-webkit-animation-iteration-count: infinite;
 			-ms-animation-iteration-count: infinite;
@@ -66,7 +66,7 @@
             -ms-animation-play-state: paused;
             animation-play-state: paused;*/
 		}
-		
+
 		@keyframes shake_box {
 			0% {
 				transform: translate(0px, 0px) rotate(0deg)
@@ -78,7 +78,7 @@
 				transform: translate(-2.5px, 0.5px) rotate(-0.5deg)
 			}
 		}
-		
+
 		@-ms-keyframes shake_box {
 			0% {
 				-ms-transform: translate(0px, 0px) rotate(0deg)
