--- a/ro-cms-controller/src/main/webapp/static/login/css/styles.css
+++ b/ro-cms-controller/src/main/webapp/static/login/css/styles.css
@@ -17,7 +17,7 @@ body {
   /* IE10+ */
   /*background: -webkit-linear-gradient(315deg, #EA5C54 0%, #bb6dec 100%);*/
   /*background: linear-gradient(135deg, #EA5C54 0%, #bb6dec 100%);*/
-  background:url(../img/gamersky_04origin_07_20183241923F66.jpg) no-repeat center 100% fixed;
+  background:url(../img/bgimage.jpg) no-repeat center 100% fixed;
   /*background-size: 100%;*/
  /*background-size: auto;*/
   /* W3C */
@@ -256,7 +256,7 @@ body .login_fields__submit input:hover {
 /**/
 body .login{
 	opacity: 0.8;
-	/*background-color: #67baff ;*/	
+	/*background-color: #67baff ;*/
 	border-top: 2px solid #67baff
 }
 body .login_fields input[type="password"] {
