--- a/ro-cms-controller/src/main/webapp/css/login/login.css
+++ b/ro-cms-controller/src/main/webapp/css/login/login.css
@@ -7,7 +7,7 @@
 			width: 100%;
 			height: 100%;
 			position: relative;
-			background: #505D6E url(../img/bgimage.jpg) no-repeat center center fixed;
+			background: #505D6E url(/images/login/bgimage.jpg) no-repeat center center fixed;
 			padding: 1px;
 			box-sizing: border-box;
 			z-index: 1;
