--- a/ro-cms-controller/src/main/webapp/views/400.html
+++ b/ro-cms-controller/src/main/webapp/views/400.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>404 页面不存在</title>
+  <title>400 页面</title>
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -16,26 +16,26 @@
   <div class="layadmin-tips">
     <i class="layui-icon" face>&#xe664;</i>
     <h2>
-      <span class="layui-anim layui-anim-loop layui-anim-" style="font-size: 40px">页面找不到了呢</span><br>
+      <span class="layui-anim layui-anim-loop layui-anim-" style="font-size: 40px">可能您的操作有误～</span><br>
     </h2>
     <div class="layui-text">
       <h1>
-        <span class="layui-anim layui-anim-loop layui-anim-">4</span>
-        <span class="layui-anim layui-anim-loop layui-anim-rotate">0</span>
-        <span class="layui-anim layui-anim-loop layui-anim-">4</span>
+        <span class="layui-anim layui-anim-loop layui-anim-">4</span> 
+        <span class="layui-anim layui-anim-loop layui-anim-">0</span>
+        <span class="layui-anim layui-anim-loop layui-anim-">0</span>
       </h1>
     </div>
     <a class="layui-btn" href="javascript:history.go(-1)">返回上一页</a>
   </div>
 </div>
 
-<script src="/layuiadmin/layui/layui.js"></script>
-<script>
+  <script src="/layuiadmin/layui/layui.js"></script>
+  <script>
   layui.config({
     base: '/layuiadmin/' //静态资源所在路径
   }).extend({
     index: 'lib/index' //主入口模块
   }).use(['index']);
-</script>
+  </script>
 </body>
 </html>
