--- a/ro-cms-controller/src/main/webapp/views/404.html
+++ b/ro-cms-controller/src/main/webapp/views/404.html
@@ -1,35 +1,41 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<meta name="renderer" content="webkit|ie-comp|ie-stand">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-<meta http-equiv="Cache-Control" content="no-siteapp" />
-<!--[if lt IE 9]>
-<script type="text/javascript" src="lib/html5shiv.js"></script>
-<script type="text/javascript" src="lib/respond.min.js"></script>
-<![endif]-->
-<link href="lib/Hui-iconfont/1.0.8/iconfont.css" rel="stylesheet" type="text/css" />
-<link href="static/h-ui/css/H-ui.min.css" rel="stylesheet" type="text/css" />
-<link href="static/h-ui.admin/css/H-ui.admin.css" rel="stylesheet" type="text/css" />
-<!--[if IE 6]>
-<script type="text/javascript" src="lib/DD_belatedPNG_0.0.8a-min.js" ></script>
-<script>DD_belatedPNG.fix('*');</script>
-<![endif]-->
-<title>404页面</title>
+  <meta charset="utf-8">
+  <title>404 页面不存在</title>
+  <meta name="renderer" content="webkit">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <link rel="stylesheet" href="/layuiadmin/layui/css/layui.css" media="all">
+  <link rel="stylesheet" href="/layuiadmin/style/admin.css" media="all">
 </head>
 <body>
-<section class="container-fluid page-404 minWP text-c">
-	<p class="error-title"><i class="Hui-iconfont va-m" style="font-size:80px">&#xe688;</i>
-		<span class="va-m"> 404</span>
-	</p>
-	<p class="error-description">不好意思，您访问的页面不存在~</p>
-	<p class="error-info">您可以：
-		<a href="javascript:;" onclick="history.go(-1)" class="c-primary">&lt; 返回上一页</a>
-		<span class="ml-20">|</span>
-		<a href="/" class="c-primary ml-20">去首页 &gt;</a>
-	</p>
-</section>
+
+
+<div class="layui-fluid">
+  <div class="layadmin-tips">
+    <i class="layui-icon" face>&#xe664;</i>
+    <h2>
+      <span class="layui-anim layui-anim-loop layui-anim-" style="font-size: 40px">页面找不到了呢</span><br>
+    </h2>
+    <div class="layui-text">
+      <h1>
+        <span class="layui-anim layui-anim-loop layui-anim-">4</span>
+        <span class="layui-anim layui-anim-loop layui-anim-rotate">0</span>
+        <span class="layui-anim layui-anim-loop layui-anim-">4</span>
+      </h1>
+    </div>
+    <a class="layui-btn" href="javascript:history.go(-1)">返回上一页</a>
+  </div>
+</div>
+
+<script src="/layuiadmin/layui/layui.js"></script>
+<script>
+  layui.config({
+    base: '/layuiadmin/' //静态资源所在路径
+  }).extend({
+    index: 'lib/index' //主入口模块
+  }).use(['index']);
+</script>
 </body>
 </html>
